# x-algorithm

.github/workflows/: x-publish-lint.yml
tools/x-publish-lint/: README.md  ROADMAP.md  pyproject.toml
tools/x-publish-lint/configs/clients/: acme.toml
tools/x-publish-lint/examples/calibration/: sample_outcomes.csv
tools/x-publish-lint/src/x_publish_lint/: __init__.py  __main__.py  cli.py  engine.py  loader.py  models.py  signals.py
tools/x-publish-lint/src/x_publish_lint/calibration/: __init__.py  loader.py  models.py  summary.py
tools/x-publish-lint/src/x_publish_lint/configs/: __init__.py  default.toml
tools/x-publish-lint/src/x_publish_lint/reports/: __init__.py  csv_report.py  json_report.py  markdown.py
tools/x-publish-lint/src/x_publish_lint/rules/: __init__.py  base.py  engagement.py  funnel.py  media.py  negative_signals.py  safety.py
tools/x-publish-lint/tests/: conftest.py  test_calibration_loader.py  test_calibration_summary.py  test_cli.py  test_engine.py  test_loader.py  test_rules_engagement.py  test_rules_negative.py
tools/x-publish-lint/tests/fixtures/: draft_bad.md  draft_good.md
