[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x-publish-lint"
version = "0.1.0"
description = "Deterministic, rules-based pre-publication lint for X/Twitter drafts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "x-algorithm contributors" }]
keywords = ["x", "twitter", "lint", "deterministic", "audit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
x-publish-lint = "x_publish_lint.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/x_publish_lint"]

[tool.hatch.build.targets.sdist]
include = [
    "src/x_publish_lint",
    "configs",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# B008: Typer requires Option/Argument as defaults.
# UP042: Pydantic v2 interoperates more smoothly with `(str, Enum)` than StrEnum.
ignore = ["E501", "B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
